# altium_monkey

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml
docs/: altium_design.md  index.md  pcbdoc.md  pcblib.md  prjpcb.md  schdoc.md  schlib.md
docs/api_patterns/: index.md
docs/examples/: index.md
docs/schemas/: index.md
examples/: .gitignore  manifest.toml
examples/assets/: .gitignore
examples/hello_altium_design/: README.md  hello_altium_design.py
examples/hello_pcbdoc/: README.md  hello_pcbdoc.py
examples/hello_pcblib/: README.md  hello_pcblib.py
examples/hello_schdoc/: README.md  hello_schdoc.py
examples/hello_schlib/: README.md  hello_schlib.py
examples/intlib_extract_sources/: README.md  intlib_extract_sources.py
examples/outjob_runner/: README.md  outjob_runner.py
examples/pcbdoc_add_arc/: README.md  pcbdoc_add_arc.py
examples/pcbdoc_add_filled_region/: README.md  pcbdoc_add_filled_region.py
examples/pcbdoc_add_free_3d_extruded/: README.md  pcbdoc_add_free_3d_extruded.py
examples/pcbdoc_add_free_3d_step/: README.md  pcbdoc_add_free_3d_step.py
examples/pcbdoc_add_pad/: README.md  pcbdoc_add_pad.py
examples/pcbdoc_add_text/: README.md  pcbdoc_add_text.py
examples/pcbdoc_add_track/: README.md  pcbdoc_add_track.py
examples/pcbdoc_bom/: README.md  pcbdoc_bom.py
examples/pcbdoc_extract_embedded_3d_models/: README.md  pcbdoc_extract_embedded_3d_models.py
examples/pcbdoc_extract_embedded_fonts/: README.md  pcbdoc_extract_embedded_fonts.py
examples/pcbdoc_extract_pcblib/: README.md  pcbdoc_extract_pcblib.py
examples/pcbdoc_insert_footprint_from_pcblib/: README.md  pcbdoc_insert_footprint_from_pcblib.py
examples/pcbdoc_insert_nets_route/: README.md  pcbdoc_insert_nets_route.py
examples/pcbdoc_netclass_svg/: README.md  pcbdoc_netclass_svg.py
examples/pcbdoc_pick_n_place/: README.md  pcbdoc_pick_n_place.py
examples/pcbdoc_stats/: README.md  pcbdoc_stats.py
examples/pcbdoc_svg/: README.md  pcbdoc_svg.py
examples/pcblib_add_free_3d_extruded/: README.md  pcblib_add_free_3d_extruded.py
examples/pcblib_extract_3d_models/: README.md  (+1 more)
tests/: test_assets.py
tools/: generate_docs.py
(+454 files in other folders)
