[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "altium-monkey"
version = "0.0.1"
description = "The most comprehensive toolkit for Altium file manipulation you will ever find."
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Eli Hughes", email = "ehughes@wavenumber.net" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/wavenumber-eng/altium_monkey"
Repository = "https://github.com/wavenumber-eng/altium_monkey"
